// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - QuoteBubble doesn't show copy to clipboard button when it's disabled 1`] = `
<Wrapper>
  <Quote />
  <BubbleTail
    variant="speech"
  />
</Wrapper>
`;

exports[`COMPONENT - QuoteBubble renders correct defaults when no props are provieded 1`] = `
<Wrapper>
  <Quote />
  <BubbleTail
    variant="speech"
  />
  <CopyButton />
</Wrapper>
`;

exports[`COMPONENT - QuoteBubble renders correctly thought variant of bubble 1`] = `
<Wrapper>
  <Quote />
  <BubbleTail
    variant="thought"
  />
</Wrapper>
`;

exports[`COMPONENT - QuoteBubble renders custom quote 1`] = `
<Wrapper>
  <Quote />
  <BubbleTail
    variant="speech"
  />
  <CopyButton />
</Wrapper>
`;
